# Django_Image_CRUD

./: README.md  git_update.txt  gitupdate.txt  pyproject.toml
Project/: db.sqlite3
Project/Project/: settings.py  urls.py
Project/app/: forms.py  models.py  urls.py  views.py
Project/app/migrations/: 0001_initial.py
Project/app/templates/: display_hotel_images.html  hotel_image_form.html
Tutorials/: 14.Updating Records.txt  15.Modelform.txt  16.Form.txt  18.Image_Upload.txt  2.Environemnt_setup.txt  3.Django_Create_App.txt  5.Django_URLs.txt  7.Create_Model.txt  How_to_run_app.txt
crud/crud/: settings.py  urls.py
crud/crud_app/: admin.py  models.py  serializers.py  urls.py  views.py
crud/crud_app/migrations/: 0001_initial.py  0002_alter_intro_id.py
frontend/: index.html  script.js  update.html
virtual_environment/: pyvenv.cfg
virtual_environment/Scripts/: activate  activate.bat
